added build dependencies

--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <ul class="table-view">
-        <li class="table-view-cell table-view-divider">Recommended movies</li>
+        <li class="table-view-cell table-view-divider">Recommended videos</li>
         <li class="table-view-cell media">
           <a class="navigate-right" href="choose-theater.html" data-transition="slide-in">
             <img class="media-object pull-left" src="http://placehold.it/64x64" alt="Placeholder image for Argo's poster">
