fix(client): adjust jquery include

--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -103,6 +103,6 @@
     <!-- /le settings -->
 
     <script src="vendor/ratchet/js/ratchet.min.js"></script>
-    <script src="js/bringste.js"></script>
+    <script src="bringste.js"></script>
   </body>
 </html>
