--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -27,7 +27,10 @@
 
     <!-- le content -->
     <div class="content">
+
+      <!-- a card -->
       <div class="card-wrapper">
+        <!-- cards metadata  -->
         <div class="card card-small card-checkable">
           <ul class="table-view">
             <li class="table-view-cell">
@@ -42,6 +45,7 @@
           </ul>
         </div>
 
+        <!-- cards list contents  -->
         <div class="card card-small card-list">
           <ul class="table-view">
             <li class="table-view-cell">
@@ -55,7 +59,15 @@
             </li>
           </ul>
         </div>
+
+        <!-- cards metadata  -->
+        <div class="checkbox-wrapper">
+          <div class="checkbox">
+            <div class="checkmark"></div>
+          </div>
+        </div>
       </div>
+
     </div>
     <!-- /le content -->
 
