styled settings dialogue

--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -79,37 +79,20 @@
       </header>
 
       <div class="content">
-        <form class="input-group">
-          <input type="text" placeholder="Full name">
-          <input type="email" placeholder="Email">
-          <input type="text" placeholder="Username">
-        </form>
 
-        <h5 class="content-padded">App settings</h5>
-
-        <ul class="table-view">
-          <li class="table-view-cell media">
-            <span class="media-object pull-left icon icon-sound"></span>
-            <div class="media-body">
-              Enable sounds
-            </div>
-            <div class="toggle">
-              <div class="toggle-handle"></div>
-            </div>
-          </li>
-          <li class="table-view-cell media">
-            <span class="media-object pull-left icon icon-person"></span>
-            <div class="media-body">
-              Parental controls
-            </div>
-            <div class="toggle">
-              <div class="toggle-handle"></div>
-            </div>
-          </li>
-        </ul>
-        <div class="content-padded">
-          <button class="btn btn-positive btn-block">Save settings</button>
+        <div class="card">
+          <ul class="table-view">
+            <li class="table-view-cell media">
+              <a class="navigate-right">
+                <span class="media-object pull-left icon icon-home"></span>
+                <div class="media-body">
+                  Home
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
+
       </div>
     </div>
     <!-- /le settings -->
