--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <link rel="stylesheet" href="vendor/ratchet/css/ratchet.css" />
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bringste.css">
   </head>
   <body>
@@ -56,7 +57,9 @@
         <!-- cards metadata  -->
         <div class="checkbox-wrapper">
           <div class="checkbox">
-            <div class="checkmark"></div>
+            <div class="checkmark">
+              <i class="fa fa-check"></i>
+            </div>
           </div>
         </div>
       </div>
