--- a/front-end/lib/list.html
+++ b/front-end/lib/list.html
@@ -8,13 +8,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <link rel="stylesheet" href="vendor/ratchet/css/ratchet.css" />
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bringste.css">
   </head>
   <body>
 
     <!-- le header -->
     <header class="bar bar-nav">
-      <h1 class="title">Settings</h1>
+      <h1 class="title">Shopping List</h1>
     </header>
     <!-- /le header -->
 
@@ -22,7 +23,50 @@
     <div class="content">
 
       <div class="card">
-      no content yet
+        <ul class="table-view">
+          <li class="table-view-cell table-view-divider">Your items</li>
+          <li class="table-view-cell media">
+            <span class="media-object pull-left">
+              <div class="checkbox">
+                <div class="checkmark">
+                  <i class="fa fa-check"></i>
+                </div>
+              </div>
+            </span>
+            <div class="media-body">Club Mate</div>
+          </li>
+          <li class="table-view-cell table-view-divider">Oma Inge's items</li>
+          <li class="table-view-cell media">
+            <span class="media-object pull-left">
+              <div class="checkbox">
+                <div class="checkmark">
+                  <i class="fa fa-check"></i>
+                </div>
+              </div>
+            </span>
+            <div class="media-body">Milch</div>
+          </li>
+          <li class="table-view-cell media">
+            <span class="media-object pull-left">
+              <div class="checkbox">
+                <div class="checkmark">
+                  <i class="fa fa-check"></i>
+                </div>
+              </div>
+            </span>
+            <div class="media-body">Zucker</div>
+          </li>
+          <li class="table-view-cell media">
+            <span class="media-object pull-left">
+              <div class="checkbox">
+                <div class="checkmark">
+                  <i class="fa fa-check"></i>
+                </div>
+              </div>
+            </span>
+            <div class="media-body">Sahne</div>
+          </li>
+        </ul>
       </div>
 
     </div>
