--- a/front-end/lib/settings.html
+++ b/front-end/lib/settings.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
     <link rel="stylesheet" href="vendor/ratchet/css/ratchet.css" />
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bringste.css">
   </head>
   <body>
