--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -19,6 +19,15 @@
     </header>
     <!-- /le header -->
 
+    <!-- le content presentation selector -->
+    <nav class="bar bar-standard bar-header-secondary">
+      <div class="segmented-control">
+        <a class="control-item active">List</a>
+        <a class="control-item">Map</a>
+      </div>
+    </nav>
+    <!-- /le content presentation selector -->
+
     <!-- le content -->
     <div class="content">
 
@@ -28,7 +37,7 @@
         <div class="card card-small card-checkable">
           <ul class="table-view">
             <li class="table-view-cell">
-              <img class="media-object pull-left" src="http://placehold.it/42x42">
+              <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
               <div class="content-horizontally-padded pull-left">
                 <p>Oma Inge</p>
                 <p>Mainstr. 19</p>
@@ -70,15 +79,15 @@
     <!-- le nav -->
       <nav class="bar bar-tab">
         <a class="tab-item active" href="index.html">
-          <span class="icon icon-home"></span>
+          <span class="icon"><i class="fa fa-home"></i></span>
           <span class="tab-label">Home</span>
         </a>
         <a class="tab-item" href="list.html">
-          <span class="icon icon-list"></span>
-          <span class="tab-label">Search</span>
+          <span class="icon"><i class="fa fa-list-ul"></i></span>
+          <span class="tab-label">Shopping List</span>
         </a>
         <a class="tab-item" href="settings.html">
-          <span class="icon icon-gear"></span>
+          <span class="icon"><i class="fa fa-cog"></i></span>
           <span class="tab-label">Settings</span>
         </a>
       </nav>
