--- a/front-end/lib/list.html
+++ b/front-end/lib/list.html
@@ -73,15 +73,15 @@
     <!-- le nav -->
       <nav class="bar bar-tab">
         <a class="tab-item" href="index.html">
-          <span class="icon icon-home"></span>
+          <span class="icon"><i class="fa fa-home"></i></span>
           <span class="tab-label">Home</span>
         </a>
         <a class="tab-item active" href="list.html">
-          <span class="icon icon-list"></span>
-          <span class="tab-label">Search</span>
+          <span class="icon"><i class="fa fa-list-ul"></i></span>
+          <span class="tab-label">Shopping List</span>
         </a>
         <a class="tab-item" href="settings.html">
-          <span class="icon icon-gear"></span>
+          <span class="icon"><i class="fa fa-cog"></i></span>
           <span class="tab-label">Settings</span>
         </a>
       </nav>
