--- a/front-end/lib/settings.html
+++ b/front-end/lib/settings.html
@@ -26,7 +26,7 @@
         <ul class="table-view">
           <li class="table-view-cell media">
             <a class="navigate-right">
-              <span class="media-object pull-left icon icon-home"></span>
+              <span class="media-object pull-left icon"><i class="fa fa-home"></i></span>
               <div class="media-body">
                 Home
               </div>
@@ -41,15 +41,15 @@
     <!-- le nav -->
       <nav class="bar bar-tab">
         <a class="tab-item" href="index.html">
-          <span class="icon icon-home"></span>
+          <span class="icon"><i class="fa fa-home"></i></span>
           <span class="tab-label">Home</span>
         </a>
         <a class="tab-item" href="list.html">
-          <span class="icon icon-list"></span>
-          <span class="tab-label">Search</span>
+          <span class="icon"><i class="fa fa-list-ul"></i></span>
+          <span class="tab-label">Shopping List</span>
         </a>
         <a class="tab-item active" href="settings.html">
-          <span class="icon icon-gear"></span>
+          <span class="icon"><i class="fa fa-cog"></i></span>
           <span class="tab-label">Settings</span>
         </a>
       </nav>
