--- a/front-end/lib/discover.html
+++ b/front-end/lib/discover.html
@@ -10,10 +10,6 @@
     <link rel="stylesheet" href="vendor/ratchet/css/ratchet.css" />
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bringste.css">
-    <!-- mapbox specific includes -->
-    <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' rel='stylesheet' />
-    <!-- /mapbox specific includes -->
   </head>
   <body>
 
@@ -26,8 +22,8 @@
     <!-- le content presentation selector -->
     <nav class="bar bar-standard bar-header-secondary">
       <div class="segmented-control">
-        <a class="control-item" href="discover.html">List</a>
-        <a class="control-item active">Map</a>
+        <a class="control-item active">List</a>
+        <a class="control-item" href="map.html">Map</a>
       </div>
     </nav>
     <!-- /le content presentation selector -->
@@ -35,10 +31,48 @@
     <!-- le content -->
     <div class="content">
 
-      <!-- le map -->
-      <div class="map-wrapper">
-        <div class="map" id='map'></div>
+      <!-- a card -->
+      <div class="card-wrapper">
+        <!-- cards metadata  -->
+        <div class="card card-small card-checkable">
+          <ul class="table-view">
+            <li class="table-view-cell">
+              <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
+              <div class="content-horizontally-padded pull-left">
+                <p>Oma Inge</p>
+                <p>Mainstr. 19</p>
+                <p>10999 Berlin</p>
+              </div>
+              <span class="badge badge-positive badge-top-aligned pull-right">3</span>
+            </li>
+          </ul>
+        </div>
+
+        <!-- cards list contents  -->
+        <div class="card card-small card-list">
+          <ul class="table-view">
+            <li class="table-view-cell">
+              <div class="content-image-padded pull-left">
+              <ul>
+                <li><p>Milch</p></li>
+                <li><p>Zucker</p></li>
+                <li><p>Sahne</p></li>
+              </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <!-- cards metadata  -->
+        <div class="checkbox-wrapper">
+          <div class="checkbox">
+            <div class="checkmark">
+              <i class="fa fa-check"></i>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- /a card -->
 
     </div>
     <!-- /le content -->
@@ -66,8 +100,5 @@
 
     <script src="vendor/ratchet/js/ratchet.min.js"></script>
     <script src="bringste.js"></script>
-    <script>
-      var map = L.mapbox.map('map', 'bringste.iik932a2').setView([40, -74.50], 9);
-    </script>
   </body>
 </html>
