--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -15,64 +15,28 @@
 
     <!-- le header -->
     <header class="bar bar-nav">
-      <h1 class="title">Discovery</h1>
+      <h1 class="title">Home</h1>
     </header>
     <!-- /le header -->
-
-    <!-- le content presentation selector -->
-    <nav class="bar bar-standard bar-header-secondary">
-      <div class="segmented-control">
-        <a class="control-item active">List</a>
-        <a class="control-item" href="map.html">Map</a>
-      </div>
-    </nav>
-    <!-- /le content presentation selector -->
 
     <!-- le content -->
     <div class="content">
 
-      <!-- a card -->
-      <div class="card-wrapper">
-        <!-- cards metadata  -->
-        <div class="card card-small card-checkable">
-          <ul class="table-view">
-            <li class="table-view-cell">
-              <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
-              <div class="content-horizontally-padded pull-left">
-                <p>Oma Inge</p>
-                <p>Mainstr. 19</p>
-                <p>10999 Berlin</p>
-              </div>
-              <span class="badge badge-positive badge-top-aligned pull-right">3</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- cards list contents  -->
-        <div class="card card-small card-list">
-          <ul class="table-view">
-            <li class="table-view-cell">
-              <div class="content-image-padded pull-left">
-              <ul>
-                <li><p>Milch</p></li>
-                <li><p>Zucker</p></li>
-                <li><p>Sahne</p></li>
-              </ul>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <!-- cards metadata  -->
-        <div class="checkbox-wrapper">
-          <div class="checkbox">
-            <div class="checkmark">
-              <i class="fa fa-check"></i>
-            </div>
-          </div>
-        </div>
+      <div class="card">
+        <ul class="table-view">
+          <li class="table-view-cell">
+            <a class="navigate-right">New order</a>
+          </li>
+        </ul>
       </div>
-      <!-- /a card -->
+
+      <div class="card">
+        <ul class="table-view">
+          <li class="table-view-cell">
+            <a class="navigate-right">See other orders</a>
+          </li>
+        </ul>
+      </div>
 
     </div>
     <!-- /le content -->
@@ -83,11 +47,15 @@
           <span class="icon"><i class="fa fa-home"></i></span>
           <span class="tab-label">Home</span>
         </a>
+        <a class="tab-item" href="discover.html">
+          <span class="icon"><i class="fa fa-map-marker"></i></span>
+          <span class="tab-label">Discover</span>
+        </a>
         <a class="tab-item" href="list.html">
           <span class="icon"><i class="fa fa-list-ul"></i></span>
           <span class="tab-label">Shopping List</span>
         </a>
-        <a class="tab-item" href="#settings">
+        <a class="tab-item" href="settings.html">
           <span class="icon"><i class="fa fa-cog"></i></span>
           <span class="tab-label">Settings</span>
         </a>
