--- a/front-end/lib/list.html
+++ b/front-end/lib/list.html
@@ -76,6 +76,10 @@
           <span class="icon"><i class="fa fa-home"></i></span>
           <span class="tab-label">Home</span>
         </a>
+        <a class="tab-item" href="discover.html">
+          <span class="icon"><i class="fa fa-map-marker"></i></span>
+          <span class="tab-label">Discover</span>
+        </a>
         <a class="tab-item active" href="list.html">
           <span class="icon"><i class="fa fa-list-ul"></i></span>
           <span class="tab-label">Shopping List</span>
