added newlist page and therefor auto generateable inputfields

--- a/front-end/lib/discover.html
+++ b/front-end/lib/discover.html
@@ -81,7 +81,7 @@
       <nav class="bar bar-tab">
         <a class="tab-item" href="index.html">
           <span class="icon"><i class="fa fa-home"></i></span>
-          <span class="tab-label">Home</span>
+          <span class="tab-label">My Lists</span>
         </a>
         <a class="tab-item active" href="discover.html">
           <span class="icon"><i class="fa fa-map-marker"></i></span>
