--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -15,28 +15,55 @@
 
     <!-- le header -->
     <header class="bar bar-nav">
-      <h1 class="title">Home</h1>
+      <a class="icon icon-plus pull-right" href="newlist.html"></a>
+      <h1 class="title">My Lists</h1>
     </header>
     <!-- /le header -->
 
     <!-- le content -->
     <div class="content">
 
-      <div class="card">
-        <ul class="table-view">
-          <li class="table-view-cell">
-            <a class="navigate-right">New order</a>
-          </li>
-        </ul>
-      </div>
+      <!-- a card -->
+      <div class="card-wrapper">
+        <!-- cards metadata  -->
+        <div class="card card-small card-checkable">
+          <ul class="table-view">
+            <li class="table-view-cell">
+              <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
+              <div class="content-horizontally-padded pull-left">
+                <p>List from 21th of June</p>
+                <p>Not yet bringste</p>
+              </div>
+              <span class="badge badge-positive badge-top-aligned pull-right">3</span>
+            </li>
+          </ul>
+        </div>
 
-      <div class="card">
-        <ul class="table-view">
-          <li class="table-view-cell">
-            <a class="navigate-right">See other orders</a>
-          </li>
-        </ul>
+        <!-- cards list contents  -->
+        <div class="card card-small card-list">
+          <ul class="table-view">
+            <li class="table-view-cell">
+              <div class="content-image-padded pull-left">
+              <ul>
+                <li><p>Milch</p></li>
+                <li><p>Zucker</p></li>
+                <li><p>Sahne</p></li>
+              </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <!-- cards metadata  -->
+        <div class="checkbox-wrapper">
+          <div class="checkbox">
+            <div class="checkmark">
+              <i class="fa fa-check"></i>
+            </div>
+          </div>
+        </div>
       </div>
+      <!-- /a card -->
 
     </div>
     <!-- /le content -->
@@ -45,7 +72,7 @@
       <nav class="bar bar-tab">
         <a class="tab-item active" href="index.html">
           <span class="icon"><i class="fa fa-home"></i></span>
-          <span class="tab-label">Home</span>
+          <span class="tab-label">My Lists</span>
         </a>
         <a class="tab-item" href="discover.html">
           <span class="icon"><i class="fa fa-map-marker"></i></span>
