--- a/front-end/lib/newlist.html
+++ b/front-end/lib/newlist.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Shopping List</title>
+    <title>bringste</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -15,32 +15,25 @@
 
     <!-- le header -->
     <header class="bar bar-nav">
-      <h1 class="title">Settings</h1>
+      <a class="icon icon-left-nav pull-left"></a>
+      <h1 class="title">New List</h1>
     </header>
     <!-- /le header -->
 
     <!-- le content -->
-    <div class="content">
+    <div class="content content-padded">
 
-      <div class="card">
-        <ul class="table-view">
-          <li class="table-view-cell media">
-            <a class="navigate-right">
-              <span class="media-object pull-left icon"><i class="fa fa-home"></i></span>
-              <div class="media-body">
-                Home
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
+      <form>
+        <input type="text" placeholder="+ Add Item" class="itemTextField" />
+        <button class="btn btn-positive btn-block">Create List</button>
+      </form>
 
     </div>
     <!-- /le content -->
 
     <!-- le nav -->
       <nav class="bar bar-tab">
-        <a class="tab-item" href="index.html">
+        <a class="tab-item active" href="index.html">
           <span class="icon"><i class="fa fa-home"></i></span>
           <span class="tab-label">My Lists</span>
         </a>
@@ -52,7 +45,7 @@
           <span class="icon"><i class="fa fa-list-ul"></i></span>
           <span class="tab-label">Shopping List</span>
         </a>
-        <a class="tab-item active" href="settings.html">
+        <a class="tab-item" href="settings.html">
           <span class="icon"><i class="fa fa-cog"></i></span>
           <span class="tab-label">Settings</span>
         </a>
