added segmented control for choose of address

--- a/front-end/lib/newlist.html
+++ b/front-end/lib/newlist.html
@@ -23,7 +23,14 @@
     <!-- le content -->
     <div class="content content-padded">
 
+      <p>Delivery Address:</p>
+      <div class="segmented-control" style="margin-bottom: 15px;">
+        <a class="control-item active" href="#item1mobile">Home</a>
+        <a class="control-item" href="#item2mobile">Current Position</a>
+      </div>
+
       <form>
+        <p>Items:</p>
         <input type="text" placeholder="+ Add Item" class="itemTextField" />
         <button class="btn btn-positive btn-block">Create List</button>
       </form>
