added date input for new lists

--- a/front-end/lib/newlist.html
+++ b/front-end/lib/newlist.html
@@ -30,6 +30,8 @@
       </div>
 
       <form>
+        <p>Due Date:</p>
+        <input type="date" class="dueDateInput" />
         <p>Items:</p>
         <input type="text" placeholder="+ Add Item" class="itemTextField" />
         <button class="btn btn-positive btn-block">Create List</button>
