feat(client): start migrate app

--- a/front-end/lib/angular-index.html
+++ b/front-end/lib/angular-index.html
@@ -13,17 +13,8 @@
     <base href="/">
   </head>
   <body>
+    <div rt-view></div>
 
-    <header class="bar bar-nav">
-      <a class="icon icon-gear pull-right" rt-toggle-modal="settings"></a>
-      <h1 class="title">bringste</h1>
-    </header>
-
-    <div ng-view>
-
-    </div>
-
-    <script src="vendor/ratchet/js/ratchet.min.js"></script>
     <script src="bringste.js"></script>
   </body>
 </html>
