--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="bringste">
   <head>
     <meta charset="utf-8">
     <title>bringste</title>
@@ -10,86 +10,12 @@
     <link rel="stylesheet" href="vendor/ratchet/css/ratchet.css" />
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bringste.css">
+
+    <base href="/">
   </head>
   <body>
+    <div rt-view></div>
 
-    <!-- le header -->
-    <header class="bar bar-nav">
-      <a class="icon icon-plus pull-right" href="newlist.html"></a>
-      <h1 class="title">My Lists</h1>
-    </header>
-    <!-- /le header -->
-
-    <!-- le content -->
-    <div class="content">
-
-      <!-- a card -->
-      <div class="card-wrapper">
-        <!-- cards metadata  -->
-        <div class="card card-small card-checkable">
-          <ul class="table-view">
-            <li class="table-view-cell">
-              <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
-              <div class="content-horizontally-padded pull-left">
-                <p>List from 21th of June</p>
-                <p>Not yet bringste</p>
-              </div>
-              <span class="badge badge-positive badge-top-aligned pull-right">3</span>
-            </li>
-          </ul>
-        </div>
-
-        <!-- cards list contents  -->
-        <div class="card card-small card-list">
-          <ul class="table-view">
-            <li class="table-view-cell">
-              <div class="content-image-padded pull-left">
-              <ul>
-                <li><p>Milch</p></li>
-                <li><p>Zucker</p></li>
-                <li><p>Sahne</p></li>
-              </ul>
-              </div>
-            </li>
-          </ul>
-        </div>
-
-        <!-- cards metadata  -->
-        <div class="checkbox-wrapper">
-          <div class="checkbox">
-            <div class="checkmark">
-              <i class="fa fa-check"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /a card -->
-
-    </div>
-    <!-- /le content -->
-
-    <!-- le nav -->
-      <nav class="bar bar-tab">
-        <a class="tab-item active" href="index.html">
-          <span class="icon"><i class="fa fa-home"></i></span>
-          <span class="tab-label">My Lists</span>
-        </a>
-        <a class="tab-item" href="discover.html">
-          <span class="icon"><i class="fa fa-map-marker"></i></span>
-          <span class="tab-label">Discover</span>
-        </a>
-        <a class="tab-item" href="list.html">
-          <span class="icon"><i class="fa fa-list-ul"></i></span>
-          <span class="tab-label">Shopping List</span>
-        </a>
-        <a class="tab-item" href="settings.html">
-          <span class="icon"><i class="fa fa-cog"></i></span>
-          <span class="tab-label">Settings</span>
-        </a>
-      </nav>
-    <!-- /le nav -->
-
-    <script src="vendor/ratchet/js/ratchet.min.js"></script>
     <script src="bringste.js"></script>
   </body>
 </html>
