--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/bringste.css">
 
+    <!-- mapbox specific includes -->
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' rel='stylesheet' />
+
     <base href="/">
   </head>
   <body>
