--- a/front-end/lib/lists/view.html
+++ b/front-end/lib/lists/view.html
@@ -33,45 +33,48 @@
 
   <!-- a card -->
   <div class="card-wrapper">
-    <!-- cards metadata  -->
-    <div class="card card-small card-checkable">
-      <ul class="table-view">
-        <li class="table-view-cell">
-          <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
-          <div class="content-horizontally-padded pull-left">
-            <p>List from 21th of June</p>
-            <p>Not yet bringste</p>
-          </div>
-          <span class="badge badge-positive badge-top-aligned pull-right">3</span>
-        </li>
-      </ul>
-    </div>
 
-    <!-- cards list contents  -->
-    <div class="card card-small card-list">
-      <ul class="table-view">
-        <li class="table-view-cell">
-          <div class="content-image-padded pull-left">
-          <ul>
-            <li><p>Milch</p></li>
-            <li><p>Zucker</p></li>
-            <li><p>Sahne</p></li>
-          </ul>
-          </div>
-        </li>
-      </ul>
-    </div>
+    <div ng-repeat="list in lists">
+      <!-- cards metadata  -->
+      <div class="card card-small card-checkable">
+        <ul class="table-view">
+          <li class="table-view-cell">
+            <img class="media-object pull-left" src="http://lorempixel.com/42/42/people/">
+            <div class="content-horizontally-padded pull-left">
+              <p>List from {{list.createdAt}}</p>
+              <p>{{list.isDelivered}}</p>
+            </div>
+            <span class="badge badge-positive badge-top-aligned pull-right">{{list.length}}</span>
+          </li>
+        </ul>
+      </div>
 
-    <!-- cards metadata  -->
-    <div class="checkbox-wrapper">
-      <div class="checkbox">
-        <div class="checkmark">
-          <i class="fa fa-check"></i>
+      <!-- cards list contents  -->
+      <div class="card card-small card-list">
+        <ul class="table-view">
+          <li class="table-view-cell">
+            <div class="content-image-padded pull-left">
+            <ul>
+              <div ng-repeat="item in list.items">
+                <li><p>{{list.name}}</p></li>
+              </div>
+            </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+
+      <!-- cards metadata  -->
+      <div class="checkbox-wrapper">
+        <div class="checkbox">
+          <div class="checkmark">
+            <i class="fa fa-check"></i>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- /a card -->
+    <!-- /a card -->
+    </div>
 
 </div>
 <!-- /le content -->
