--- a/front-end/lib/shoppinglist/view.html
+++ b/front-end/lib/shoppinglist/view.html
@@ -31,8 +31,22 @@
 <div class="content">
 
   <!-- a card -->
-  <div ng-repeat="item in list.items">
-    <input type="text" placeholder="+ Add Item" focus-on="item" ng-change="changed(item)" ng-model="item.name" />
+  <div ng-repeat="subscribedList in subscribedLists">
+    <ul class="table-view">
+      <li class="table-view-cell table-view-divider">{{subscribedList.creator.name}}</li>
+      <div ng-repeat="item in subscribedList.items">
+        <li class="table-view-cell media">
+          <span class="media-object pull-left">
+            <div class="checkbox">
+              <div class="checkmark">
+                <i class="fa fa-check"></i>
+              </div>
+            </div>
+          </span>
+            <div class="media-body">{{item.name}}</div>
+        </li>
+      </div>
+    </ul>
   </div>
   <!-- /a card -->
 
