feat(client): add nav + fix map

--- a/front-end/lib/discover/map/view.html
+++ b/front-end/lib/discover/map/view.html
@@ -4,6 +4,7 @@
 </header>
 <!-- /le header -->
 
+
 <!-- le content presentation selector -->
 <nav class="bar bar-standard bar-header-secondary">
   <div class="segmented-control">
@@ -14,34 +15,12 @@
 <!-- /le content presentation selector -->
 
 
-<!-- le nav -->
-<nav class="bar bar-tab">
-  <a class="tab-item" href="index.html">
-    <span class="icon"><i class="fa fa-home"></i></span>
-    <span class="tab-label">My Lists</span>
-  </a>
-  <a class="tab-item active" href="discover.html">
-    <span class="icon"><i class="fa fa-map-marker"></i></span>
-    <span class="tab-label">Discover</span>
-  </a>
-  <a class="tab-item" href="list.html">
-    <span class="icon"><i class="fa fa-list-ul"></i></span>
-    <span class="tab-label">Shopping List</span>
-  </a>
-  <a class="tab-item" href="settings.html">
-    <span class="icon"><i class="fa fa-cog"></i></span>
-    <span class="tab-label">Settings</span>
-  </a>
-</nav>
-<!-- /le nav -->
-
-
 <!-- le content -->
 <div class="content">
 
   <!-- le map -->
   <div class="map-wrapper">
-    <div class="map" id="map"></div>
+    <div class="map" bste-map></div>
   </div>
 
 </div>
