--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -18,6 +18,8 @@
     <base href="/">
   </head>
   <body>
+    <div bste-nav></div>
+
     <div rt-view></div>
 
     <script src="bringste.js"></script>
