--- a/front-end/lib/lists/new/view.html
+++ b/front-end/lib/lists/new/view.html
@@ -1,31 +1,10 @@
-<!-- le nav -->
-<nav class="bar bar-tab">
-  <a class="tab-item active" href="index.html">
-    <span class="icon"><i class="fa fa-home"></i></span>
-    <span class="tab-label">My Lists</span>
-  </a>
-  <a class="tab-item" href="discover.html">
-    <span class="icon"><i class="fa fa-map-marker"></i></span>
-    <span class="tab-label">Discover</span>
-  </a>
-  <a class="tab-item" href="list.html">
-    <span class="icon"><i class="fa fa-list-ul"></i></span>
-    <span class="tab-label">Shopping List</span>
-  </a>
-  <a class="tab-item" href="settings.html">
-    <span class="icon"><i class="fa fa-cog"></i></span>
-    <span class="tab-label">Settings</span>
-  </a>
-</nav>
-<!-- /le nav -->
-
-
 <!-- le header -->
 <header class="bar bar-nav">
-  <a class="icon icon-left-nav pull-left"></a>
+  <a class="icon icon-left-nav pull-left" href rt-navigation-pop></a>
   <h1 class="title">New List</h1>
 </header>
 <!-- /le header -->
+
 
 <!-- le content -->
 <div class="content content-padded">
