implemented blankslate as text if there are no bring requests to show

--- a/front-end/lib/blankslate.html
+++ b/front-end/lib/blankslate.html
@@ -22,7 +22,12 @@
 
     <!-- le content -->
     <div class="content">
-      <img class="blankslate" src="img/blankslate.png" alt="No Lists to show. Create a new list or discover others to continue."/>
+      <p class="blankslate">
+        <span class="blankslateHeadline">No Lists to show.</span>
+        <span>You don't have any shared lists so far.</span>
+        <span>Start by creating a <a rt-navigation-push href="/lists/new">new List</a></span>
+        <span>or <a rt-navigation-push href="/discover">discover</a> other lists.</span>
+      </p>
     </div>
     <!-- /le content -->
 
