--- a/front-end/lib/discover/view.html
+++ b/front-end/lib/discover/view.html
@@ -60,11 +60,12 @@
 
   <!-- le blankslate -->
   <p class="blankslate" ng-if="bringRequests.length == 0" >
-    <span class="blankslateHeadline">No Lists to show.</span>
-    <span>You don't have any shared lists so far.</span>
-    <span>Start by creating a <a rt-navigation-push href="/lists/new">new List</a></span>
-    <span>or <a rt-navigation-push href="/discover">discover</a> other lists.</span>
+    <span class="blankslateHeadline">No requests to show</span>
+    <span>There are currently no requests around you.</span>
+    <span>Start over by creating a <a rt-navigation-push href="/lists/new">new List</a></span>
+    <span>or just take a nap.</span>
   </p>
   <!-- /le blankslate -->
+
 </div>
 <!-- /le content -->
