made discovery cards expandable

--- a/front-end/lib/discover/view.html
+++ b/front-end/lib/discover/view.html
@@ -18,10 +18,10 @@
 <div class="content">
 
   <!-- a card -->
-  <div class="card-wrapper" ng-if="bringRequests.length > 0" ng-repeat="entry in bringRequests">
+  <div class="card-wrapper" ng-if="bringRequests.length > 0" ng-repeat="entry in bringRequests" ng-class="{ 'card-wrapper-active': entry.isExpanded === true }">
     <!-- cards metadata  -->
     <div class="card card-small card-checkable">
-      <ul class="table-view">
+      <ul class="table-view" ng-click="toggleExpansion(entry)">
         <li class="table-view-cell">
           <img class="media-object pull-left" ng-src="{{ entry.user.imgUrl }}">
           <div class="content-horizontally-padded pull-left">
@@ -36,7 +36,7 @@
 
     <!-- cards list contents  -->
     <div class="card card-small card-list">
-      <ul class="table-view">
+      <ul class="table-view" ng-click="toggleExpansion(entry)">
         <li class="table-view-cell">
           <div class="content-image-padded pull-left">
           <ul>
@@ -49,7 +49,7 @@
 
     <!-- cards metadata  -->
     <div class="checkbox-wrapper">
-      <div class="checkbox">
+      <div class="checkbox" ng-class="{ 'checkbox-checked': entry.isSelected === true }" ng-click="toggleSelected(entry)">
         <div class="checkmark">
           <i class="fa fa-check"></i>
         </div>
