--- a/front-end/lib/index.html
+++ b/front-end/lib/index.html
@@ -15,6 +15,8 @@
     <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.4/mapbox.css' rel='stylesheet' />
 
+    <script src="vendor/fastclick/fastclick.js"></script>
+
     <base href="/">
   </head>
   <body>
