--- a/front-end/lib/shopping-list/view.html
+++ b/front-end/lib/shopping-list/view.html
@@ -12,18 +12,16 @@
   <div ng-if="subscribedLists.length > 0" ng-repeat="subscribedList in subscribedLists">
     <ul class="table-view">
       <li class="table-view-cell table-view-divider">{{subscribedList.creator.name}}</li>
-      <div ng-repeat="item in subscribedList.items">
-        <li class="table-view-cell media" ng-click="toggleSelected(item)">
-          <span class="media-object pull-left">
-            <div class="checkbox" ng-class="{ 'checkbox-checked': item.isSelected === true }">
-              <div class="checkmark">
-                <i class="fa fa-check"></i>
-              </div>
+      <li class="table-view-cell media" ng-click="toggleSelected(item)" ng-repeat="item in subscribedList.items">
+        <span class="media-object pull-left">
+          <div class="checkbox" ng-class="{ 'checkbox-checked': item.isSelected === true }">
+            <div class="checkmark">
+              <i class="fa fa-check"></i>
             </div>
-          </span>
-            <div class="media-body">{{item.name}}</div>
-        </li>
-      </div>
+          </div>
+        </span>
+          <div class="media-body">{{item.name}}</div>
+      </li>
     </ul>
   </div>
   <!-- /a card -->
