moved badge in navigation to response to screen size

--- a/front-end/lib/skeleton/nav.html
+++ b/front-end/lib/skeleton/nav.html
@@ -9,7 +9,7 @@
     <span class="tab-label">Discover</span>
   </a>
   <a class="tab-item" ng-class="{ active: isActive('/shopping-list') }" rt-navigation-push href="/shopping-list">
-    <span class="icon"><i class="fa fa-list-ul"></i></span>
+    <span class="icon"><i class="fa fa-list-ul"></i><span class="badge badge-negative">4</span></span>
     <span class="tab-label">Shopping List</span>
   </a>
   <a class="tab-item" rt-toggle-modal="settings" href>
