--- a/front-end/lib/skeleton/nav.html
+++ b/front-end/lib/skeleton/nav.html
@@ -6,7 +6,7 @@
   </a>
   <a class="tab-item" ng-class="{ active: isActive('/discover') }" rt-navigation-push href="/discover">
     <span class="icon"><i class="fa fa-map-marker"></i></span>
-    <span class="tab-label">Discover</span>
+    <span class="tab-label">Bring it!</span>
   </a>
   <a class="tab-item" ng-class="{ active: isActive('/shopping-list') }" rt-navigation-push href="/shopping-list">
     <span class="icon"><i class="fa fa-list-ul"></i><span class="badge badge-negative">4</span></span>
