--- a/front-end/lib/settings/view.html
+++ b/front-end/lib/settings/view.html
@@ -7,35 +7,21 @@
 
 
   <div class="content">
-    <form class="input-group">
-      <input type="text" placeholder="Full name" ng-model="foo">
-      <input type="email" placeholder="Email">
-      <input type="text" placeholder="Username">
-    </form>
+    <h5 class="content-padded">Account settings</h5>
+    <div class="input-group">
+      <input type="text" placeholder="Username" ng-model="profile.username">
+      <input type="email" placeholder="Email" ng-model="profile.email">
+      <input type="password" placeholder="Password" ng-model="profile.password">
+    </div>
 
-    <h5 class="content-padded">App settings</h5>
+    <h5 class="content-padded">Details</h5>
 
-    <ul class="table-view">
-      <li class="table-view-cell media">
-        <span class="media-object pull-left icon icon-sound"></span>
-        <div class="media-body">
-          Enable sounds
-        </div>
-        <div class="toggle">
-          <div class="toggle-handle"></div>
-        </div>
-      </li>
+    <div class="input-group">
+      <input type="text" placeholder="Full name" ng-model="profile.fullname">
 
-      <li class="table-view-cell media">
-        <span class="media-object pull-left icon icon-person"></span>
-        <div class="media-body">
-          Parental controls
-        </div>
-        <div class="toggle">
-          <div class="toggle-handle"></div>
-        </div>
-      </li>
-    </ul>
+      <input type="text" placeholder="My Home Address" ng-model="profile.address">
+    </div>
+
     <div class="content-padded">
       <button class="btn btn-positive btn-block">Save settings</button>
     </div>
