--- a/front-end/lib/settings/view.html
+++ b/front-end/lib/settings/view.html
@@ -1,30 +1,31 @@
-<!-- Settings modal -->
-<div class="modal">
-  <header class="bar bar-nav">
-    <a class="icon icon-close pull-right" rt-toggle-modal="settings" href></a>
-    <h1 class="title">Settings</h1>
-  </header>
+<!-- le header -->
+<header class="bar bar-nav">
+  <h1 class="title">Shopping List</h1>
+</header>
+<!-- /le header -->
 
 
-  <div class="content">
-    <h5 class="content-padded">Account settings</h5>
-    <div class="input-group">
-      <input type="text" placeholder="Username" ng-model="profile.username">
-      <input type="email" placeholder="Email" ng-model="profile.email">
-      <input type="password" placeholder="Password" ng-model="profile.password">
-    </div>
+<!-- le content -->
+<div class="content content-padded">
 
-    <h5 class="content-padded">Details</h5>
-
-    <div class="input-group">
-      <input type="text" placeholder="Full name" ng-model="profile.fullname">
-
-      <input type="text" placeholder="My Home Address" ng-model="profile.address">
-    </div>
-
-    <div class="content-padded">
-      <button class="btn btn-positive btn-block">Save settings</button>
-    </div>
+  <h5>Account settings</h5>
+  <div class="input-group">
+    <input type="text" placeholder="Username" ng-model="profile.username">
+    <input type="email" placeholder="Email" ng-model="profile.email">
+    <input type="password" placeholder="Password" ng-model="profile.password">
   </div>
+
+  <h5>Details</h5>
+
+  <div class="input-group">
+    <input type="text" placeholder="Full name" ng-model="profile.fullname">
+
+    <input type="text" placeholder="My Home Address" ng-model="profile.address">
+  </div>
+
+  <div>
+    <button class="btn btn-positive btn-block">Save settings</button>
+  </div>
+
 </div>
-<!-- /.modal -->
+<!-- /le content -->
